# securepip

./: README.md  deploy.sh  install.sh  pyproject.toml  requirements.txt  secure_pip.py  setup.py
