[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "securepip"
version = "0.1.0"
description = "A secure alternative to pip that analyzes packages for vulnerabilities before installation"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "requests>=2.31.0",
    "tqdm>=4.65.0",
    "colorama>=0.4.6",
    "packaging>=23.0",
    "PyYAML>=6.0",
    "pip>=23.0",
    "urllib3>=2.0.0",
]

[project.scripts]
securepip = "securepip.cli:main"

[tool.setuptools]
include-package-data = true 